attached database with student view tables

--- a/css/styless.css
+++ b/css/styless.css
@@ -73,6 +73,73 @@ body {
   outline: 0 !important;
 }
 
+    			*
+				{
+				    padding: 0;
+				    margin: 0px;
+				}
+				
+				
+				td
+				{
+					background: rgba(0,0,0,0.3);
+				}
+
+				table, tr, th, td
+				{
+				    border: 1px solid white;
+				    border-collapse: collapse;
+				    text-align: center;
+				    
+				    color: white;
+				    font-size: 18px;
+				   
+				}
+				tr, th{
+				    padding: 15px;
+
+				    
+				}
+				#ttt
+				{
+				    padding-left: 80px;
+				    text-align: center;
+				    padding-right: 50px;
+				}
+				
+				#tab::-webkit-scrollbar {
+   					 display: none;
+				}
+
+				#tab
+				{
+					width: 1100px;
+					height: 400px;
+					order: scroll;
+					overflow-x:auto;
+					overflow-y: auto;
+					margin-left: -1%;
+					
+				}
+				.dy
+				{
+					padding-right: 50px;
+				}
+				#dy
+				{
+					padding-right: 25px;
+					padding-left: 25px;
+				}
+				
+				th
+				{
+					position: sticky;
+					top : 0;
+					background: rgba(0,0,0,0.9);
+				}
+
+
+
 hr {
   box-sizing: content-box;
   height: 0;
@@ -10070,9 +10137,9 @@ img::-moz-selection {
   height: 1.5rem;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: unset;
   font-size: 0.95rem;
-  color: #000;
+  color: #f9f5f5bf;
   letter-spacing: 0.0625em;
 }
 #mainNav .navbar-nav .nav-item .nav-link.active, #mainNav .navbar-nav .nav-item .nav-link:hover {
@@ -10084,7 +10151,7 @@ img::-moz-selection {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     border: none;
-    background-color: transparent;
+    background-color: #0000009e;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
