--- a/css/sty.css
+++ b/css/sty.css
@@ -10425,7 +10425,7 @@ header.masthead .masthead-heading {
 
 section#contact  {
   background-color: #212529;
-  background-image: url("../assets/img/map-image.png");
+  background-image: url("../assets/img/hhhh.png");
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -10480,6 +10480,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 .footer {
   text-align: center;
   font-size: 0.9rem;
+  background-color: #312D2A;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
