made some a lot of changes to the site clone ti view them all

--- a/css/styless.css
+++ b/css/styless.css
@@ -10491,7 +10491,7 @@ header.masthead .masthead-heading {
 }
 
 section#contact  {
-  background-color: #212529;
+  background-color: #6c757d;
   background-image: url("../assets/img/hhhh.png");
   background-repeat: no-repeat;
   background-position: center;
