--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #062d53;
   text-align: left;
   background-color: #fff;
 }
@@ -159,7 +159,7 @@ sup {
 }
 
 a {
-  color: #fed136;
+  color:  #fd7e14;
   text-decoration: none;
   background-color: transparent;
 }
@@ -4385,7 +4385,7 @@ input[type=button].btn-block {
 
 .card-footer {
   padding: 0.75rem 1.25rem;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: rgba(129, 121, 121, 0.03);
   border-top: 1px solid rgba(0, 0, 0, 0.125);
 }
 .card-footer:last-child {
@@ -9711,6 +9711,7 @@ button.bg-dark:focus {
 @media (min-width: 992px) {
   .text-lg-left {
     text-align: left !important;
+    color:  #fd7e14;
   }
 
   .text-lg-right {
@@ -10119,8 +10120,10 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  /* background-image: url("../assets/img/std.jpg"); */
-  background-color: #0c5460;
+  /* background-image: url("../assets/img/std.jpg"); 
+  the backgroudn image was removed and replaced with the bg-color
+  */ 
+  background-color: #D3D3D3;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -10430,7 +10433,7 @@ header.masthead .masthead-heading {
 .footer {
   text-align: center;
   font-size: 0.9rem;
-  background-color: #312D2A;
+  background-color: #343a40;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
